@@ -1,0 +1,30 @@
+64 << 0 = 64 (64)
+64 << 2 = 256 (256)
+-64 << 2 = -256 (-256)
+64 << -2 = 16 (16)
+-64 << -2 = -16 (-16)
+64 << -256 = 0 (0)
+-64 << -256 = -1 (-1)
+25 << 3 = 200 (200)
+-25 << 3 = -200 (-200)
+25 << -3 = 3 (3)
+-25 << -3 = -4 (-4)
+64 >> 0 = 64 (64)
+64 >> 2 = 16 (16)
+-64 >> 2 = -16 (-16)
+64 >> -2 = 256 (256)
+-64 >> -2 = -256 (-256)
+64 >> 256 = 0 (0)
+-64 >> 256 = -1 (-1)
+25 >> 3 = 3 (3)
+-25 >> 3 = -4 (-4)
+25 >> -3 = 200 (200)
+-25 >> -3 = -200 (-200)
+64 unchecked_left_shift 2 = 256 (256)
+-64 unchecked_right_shift 2 = -16 (-16)
+The following cases test undefined behaviour
+(they cause overflow):
+64 << 256 = 0 (0)
+-64 << 256 = 0 (0)
+64 >> -256 = 0 (0)
+-64 >> -256 = 0 (0)
